# Data-Privacy-Guardian

./: .gitignore  README.md
core/: Cargo.toml
core/src/: lib.rs
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/public/: options.html  popup.html
extension/src/background/: service_worker.ts
extension/src/content/: dom_monitor.ts
extension/src/options/: index.tsx
extension/src/options/components/: OptionsDashboard.tsx
extension/src/popup/: index.tsx
extension/src/popup/components/: Dashboard.tsx
