[package]
name = "dpg_core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
url = "2.5"

[profile.release]
lto = true
opt-level = 'z' # Optimize heavily for minimum binary size
codegen-units = 1